<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jafritech.myapplication.MainActivity">
    <item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/close"
        app:showAsAction="never" />

</menu>