<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTitleStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <ImageView
        android:id="@+id/imgTitleBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        android:contentDescription="@string/title_bg"
        app:layout_constraintBottom_toTopOf="@+id/guideTitleEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTitleStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLogoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <ImageView
        android:id="@+id/logo_title_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/brand_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideTitleEnd"
        app:layout_constraintEnd_toEndOf="@id/guideLogoEnd"
        app:layout_constraintStart_toStartOf="@id/guideLogoStart"
        app:layout_constraintTop_toTopOf="@+id/guideTitleStart"
        app:srcCompat="@drawable/ctlogo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLogoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <TextView
        android:id="@+id/title_rest_name_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andada"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="48sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideTitleEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideAboutEndLimit"
        app:layout_constraintStart_toEndOf="@+id/logo_title_img"
        app:layout_constraintTop_toTopOf="@+id/guideTitleStart"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideNameEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/title_page_heading_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/andika"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/details"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="48sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideTitleEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideRightEnd"
        app:layout_constraintStart_toStartOf="@+id/guideNameEnd"
        app:layout_constraintTop_toTopOf="@+id/guideTitleStart"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlCompat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRightEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideAboutEndLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTitleEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideImgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideImgEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTitleEnd"
        app:srcCompat="@drawable/home_image"
        android:contentDescription="@string/main_image"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideImgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBodyStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />



    <TextView
        android:id="@+id/textView331"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/andada"
        android:lines="1"
        android:text="@string/item"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody1"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideLogoStart"
        app:layout_constraintTop_toTopOf="@+id/guideBodyStart" />

    <TextView
        android:id="@+id/tv_itemname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andada"
        android:lines="1"
        android:textColor="@color/text_color"
        android:text="@string/chicken_fried_rice"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody1"
        app:layout_constraintEnd_toStartOf="@+id/guideRightEnd"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideBodyStart" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <TextView
        android:id="@+id/textView441"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/andada"
        android:lines="1"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody3"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideLogoStart"
        app:layout_constraintTop_toTopOf="@+id/guideBody2" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andada"
        android:lines="1"
        android:text="@string/_20_00_unit_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text_color"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody3"
        app:layout_constraintEnd_toStartOf="@+id/guideRightEnd"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideBody2" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <TextView
        android:id="@+id/textView661"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/andada"
        android:lines="1"
        android:text="@string/qty"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody5"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideLogoStart"
        app:layout_constraintTop_toTopOf="@+id/guideBody4" />


    <TextView
        android:id="@+id/tv_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody55"
        app:layout_constraintEnd_toStartOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toTopOf="@+id/guideBody4" />

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryLightColor"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:lines="1"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody55"
        app:layout_constraintEnd_toStartOf="@+id/guideline27"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideBody4" />

    <TextView
        android:id="@+id/tv_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody55"
        app:layout_constraintEnd_toStartOf="@+id/guideline28"
        app:layout_constraintStart_toStartOf="@+id/guideline27"
        app:layout_constraintTop_toTopOf="@+id/guideBody4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/andada"
        tools:lines="1"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideBody7"
        app:layout_constraintEnd_toStartOf="@+id/guideRightEnd"
        app:layout_constraintStart_toStartOf="@+id/guideLogoStart"
        app:layout_constraintTop_toTopOf="@+id/guideBody6"
        tools:text="1 Pc(s) of fried rice = £5.00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBody7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGuideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <Button
        android:id="@+id/cancel_item_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/andada"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeStepGranularity="4sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuideEnd"
        app:layout_constraintEnd_toStartOf="@+id/add_item_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonGuideStart" />

    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/andada"
        android:paddingStart="1dp"
        android:paddingTop="10dp"
        android:paddingEnd="1dp"
        android:paddingBottom="10dp"
        android:text="@string/add"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuideEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_item_btn"
        app:layout_constraintTop_toTopOf="@+id/buttonGuideStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGuideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />
</androidx.constraintlayout.widget.ConstraintLayout>